# labyrinth

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  PROJECT_OVERVIEW.md  README.md  pyproject.toml
docs/: README_authentication.md  REGISTRY.md  azure_setup_guide.md
examples/: .env.example  auth_config_examples.py  authenticated_agents.py  basic_example.py  cli_authentication.py  multi_agent_example.py  registry_example.py
labyrinth/: __init__.py
labyrinth/auth/: __init__.py  config.py  exceptions.py  interactive.py  interfaces.py  middleware.py  validators.py
labyrinth/auth/providers/: __init__.py  azure_entra.py
labyrinth/cli/: __init__.py  auth.py  registry.py
labyrinth/client/: __init__.py  agent_client.py  authenticated_client.py  discovery.py
labyrinth/server/: __init__.py  agent.py  authenticated_registry.py  registry.py
labyrinth/types/: __init__.py  messages.py  tasks.py
labyrinth/utils/: __init__.py  config.py  exceptions.py  logging.py
tests/: __init__.py  conftest.py  test_config.py  test_types.py
